--- a/index.html
+++ b/index.html
@@ -4,78 +4,169 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Todo App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        .Set_ToDo {
-            width: 500px;
-            margin: 300px;
-            background-color: white;
-            padding: 20px;
-        }
-
-        .taskadd {
-            /* display: none; */
-            font-size: 19px;
-            border-bottom: 1px solid #F0F1F3;
-            margin-top: 14px;
-        }
-
-        .bg_col {
-            background-color: #F0F1F3;
-        }
-
-        .task_input {
-            padding: 14px 20px;
-            border-radius: 45px;
-            border: 1px solid #F0F1F3;
-            outline: none;
-            width: 76%;
-        }
-
-        button {
-            position: relative;
-            border: none;
-            float: right;
-            border-radius: 45px;
-            padding: 14px 20px;
-            color: white;
-            background-color: #4d7ede;
-            outline: none;
-        }
-
-        .delete {
-            position: relative;
-            border: none;
-            background-color: white;
-            float: right;
+        * {
             padding: 0;
+            margin: 0;
         }
 
-        .newTask {
-            display: flex;
-            justify-content: space-between;
+        .completed {
+            color: green;
+            width: 100%;
+            font-size: 16px;
+            font-family: fantasy;
+            font-weight: 500 !important;
+        }
+
+        li {
+            font-size: 16px;
+            font-family: cursive;
+            font-weight: 500 !important;
+            border: 1px solid #F0F1F3;
+        }
+
+        #taskInput {
+            width: 84%;
+            padding: 12px 20px;
+            border-radius: 9px;
+            border: 1px solid #F0F1F3;
+        }
+
+        #addTask {
+            padding: 12px 20px;
+            border-radius: 9px;
+            border: 1px solid #F0F1F3;
+            margin-left: 12px;
+        }
+
+        .BG_fix {
+            background-color: white;
+            max-width: 70%;
         }
     </style>
 </head>
 
 <body>
-    <div class="d-flex justify-content-between bg_col">
-        <div class="Set_ToDo">
-            <input type="text" class="task_input" placeholder="Add a new task">
-            <button id="push">Add Task</button>
-            <div class="taskS_input">
+    <div class="container p-0">
+        <div class="BG_fix">
+            <h1>Todo App</h1>
+            <div class="row">
+                <input type="text" id="taskInput" class="" placeholder="Add a new task">
+                <button id="addTask" class="btn btn-primary mt-2">Add Task</button>
             </div>
+            <ul id="taskList" class="list-group mt-3">
+            </ul>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script>
+        document.getElementById('addTask').onclick = function () {
+            const taskInput = document.getElementById('taskInput');
+            const taskText = taskInput.value.trim();
+
+            if (taskText === '') {
+                alert('Please enter a task.');
+            } else {
+                const li = document.createElement('li');
+                li.className = 'list-group-item';
+                li.innerHTML = `
+          <span>${taskText}</span>
+          <button class="btn btn-success float-right mr-2 complete">Complete</button>
+          <button class="btn btn-warning float-right mr-2 edit">Edit</button>
+          <button class="btn btn-danger float-right delete">Delete</button>
+        `;
+
+                const completeButton = li.querySelector('.complete');
+                const editButton = li.querySelector('.edit');
+                const deleteButton = li.querySelector('.delete');
+
+                completeButton.onclick = function () {
+                    li.querySelector('span').classList.toggle('completed');
+                    updateLocalStorage();
+                };
+
+                editButton.onclick = function () {
+                    const newTaskText = prompt('Edit the task:', taskText);
+                    if (newTaskText !== null && newTaskText.trim() !== '') {
+                        li.querySelector('span').textContent = newTaskText;
+                        updateLocalStorage();
+                    }
+                };
+
+                deleteButton.onclick = function () {
+                    li.remove();
+                    updateLocalStorage();
+                };
+
+                document.getElementById('taskList').appendChild(li);
+
+                taskInput.value = '';
+
+                updateLocalStorage();
+            }
+        };
+
+        function updateLocalStorage() {
+            const taskList = document.querySelectorAll('.list-group-item span');
+            const tasks = [];
+
+            taskList.forEach(function (task) {
+                tasks.push(task.textContent);
+            });
+
+            localStorage.setItem('todoList', JSON.stringify(tasks));
+        }
+
+        function loadTasks() {
+            const storedTasks = localStorage.getItem('todoList');
+
+            if (storedTasks) {
+                const tasks = JSON.parse(storedTasks);
+
+                tasks.forEach(function (taskText) {
+                    const li = document.createElement('li');
+                    li.className = 'list-group-item';
+                    li.innerHTML = `
+            <span>${taskText}</span>
+            <button class="btn btn-success float-right mx-2 complete">Complete</button>
+            <button class="btn btn-warning float-right mx-2 edit">Update</button>
+            <button class="btn btn-danger float-right delete">Delete</button>
+          `;
+
+                    const completeButton = li.querySelector('.complete');
+                    const editButton = li.querySelector('.edit');
+                    const deleteButton = li.querySelector('.delete');
+
+                    // Add a click event listener to the complete button
+                    // const completeButton = li.querySelector('.complete');
+                    completeButton.onclick = function () {
+                        li.querySelector('span').classList.toggle('completed');
+                        updateLocalStorage();
+                    };
+
+                    editButton.onclick = function () {
+                        const newTaskText = prompt('Edit the task:', taskText);
+                        if (newTaskText !== null && newTaskText.trim() !== '') {
+                            li.querySelector('span').textContent = newTaskText;
+                            updateLocalStorage();
+                        }
+                    };
+
+                    deleteButton.onclick = function () {
+                        li.remove();
+                        updateLocalStorage();
+                    };
+
+                    // Append the loaded task to the task list
+                    document.getElementById('taskList').appendChild(li);
+                });
+            }
+        }
+
+        // Load tasks when the page is refreshed
+        window.addEventListener('load', loadTasks);
+    </script>
 </body>
 
 </html>
