--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 li.className = 'list-group-item';
                 li.innerHTML = `
           <span>${taskText}</span>
-          <button class="btn btn-success float-right mr-2 complete">Complete</button>
-          <button class="btn btn-warning float-right mr-2 edit">Edit</button>
+          <button class="btn btn-success float-right m-2 complete">Complete</button>
+          <button class="btn btn-warning float-right m-2 edit">Edit</button>
           <button class="btn btn-danger float-right delete">Delete</button>
         `;
 
