--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
                     completeButton.onclick = function () {
-                        document.querySelector('span').classList.toggle('completed');
+                        li.querySelector('span').classList.toggle('completed');
                         updateLocalStorage();
                     };
 
